--- a/build.gradle
+++ b/build.gradle
@@ -36,3 +36,9 @@ dependencyManagement {
 test {
 	useJUnitPlatform()
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'DemoApplication'
+    }
+}
