--- a/.github/workflows/master_spring-ad-test.yml
+++ b/.github/workflows/master_spring-ad-test.yml
@@ -21,7 +21,7 @@ jobs:
         java-version: '11'
 
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build -x test
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
