HTTPS用の設定追加

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.security.oauth2.client.registration.azure.client-secret=${AZURE_CLIENT_SE
 
 # Specifies the list of Active Directory groups to use for authorization:
 azure.activedirectory.active-directory-groups=spring-ad-test-group
+
+server.use-forward-headers=true
