--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,11 +1,13 @@
 # Specifies your Active Directory ID:
-azure.activedirectory.tenant-id=89465d4f-2cbd-4f6b-88db-6bc8f2eb166f
+azure.activedirectory.tenant-id=${AZURE_TENANT_ID}
 
 # Specifies your App Registration's Application ID:
-spring.security.oauth2.client.registration.azure.client-id=347cc60f-e54f-4f9b-a812-e2764790d371
+spring.security.oauth2.client.registration.azure.client-id=${AZURE_CLIENT_ID}
 
 # Specifies your App Registration's secret key:
-spring.security.oauth2.client.registration.azure.client-secret=Vv_dsU-k.nd1xnn5j~qF2T3m2_MIP4V~iM
+spring.security.oauth2.client.registration.azure.client-secret=${AZURE_CLIENT_SECRET}
 
 # Specifies the list of Active Directory groups to use for authorization:
 azure.activedirectory.active-directory-groups=spring-ad-test-group
+
+server.use-forward-headers=true
